--- a/server-typescript-graphql/package.json
+++ b/server-typescript-graphql/package.json
@@ -13,10 +13,17 @@
   "dependencies": {
     "@apollo/federation": "^0.38.1",
     "@apollo/gateway": "^2.7.2",
-    "apollo-server": "^3.13.0",
+    "@apollo/server": "^4.10.2",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.3.1",
+    "morgan": "^1.10.0",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9"
   }
 }
