--- a/server-typescript-graphql/package.json
+++ b/server-typescript-graphql/package.json
@@ -18,12 +18,14 @@
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9"
   }
 }
