--- a/server-typescript-graphql/package.json
+++ b/server-typescript-graphql/package.json
@@ -2,11 +2,11 @@
   "name": "server-typescript-graphql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start-gateway": "nodemon gateway/index.ts",
+    "start-service-users": "nodemon services/users/index.ts",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,18 +14,26 @@
     "@apollo/federation": "^0.38.1",
     "@apollo/gateway": "^2.7.2",
     "@apollo/server": "^4.10.2",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
     "helmet": "^7.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "tsconfig-paths": "^4.2.0"
   }
 }
