--- a/server-typescript-graphql/package.json
+++ b/server-typescript-graphql/package.json
@@ -6,7 +6,9 @@
     "build": "tsc",
     "start-gateway": "nodemon gateway/index.ts",
     "start-service-users": "nodemon services/users/index.ts",
-    "test": "jest"
+    "test": "jest --watch",
+    "test-all": "jest --clearCache && jest && test-coverage",
+    "test-coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -29,11 +31,15 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "babel-jest": "^29.7.0",
     "tsconfig-paths": "^4.2.0"
   }
 }
